# hse_prod_cpp_2023

./: .gitignore  hw1.tar.xz
hw1/: CMakeLists.txt  README.md
hw1/include/inline_vector/: inline_vector.hpp
hw1/projects/invec_wrapper/: CMakeLists.txt
hw1/projects/invec_wrapper/src/: invec_wrapper.cpp
hw1/testsuite/invec_wrapper/: CMakeLists.txt  test_invec_wrapper.py  utils.py
hw1/testsuite/libsrc/inline_vector/: CMakeLists.txt
hw1/testsuite/libsrc/inline_vector/src/: test.cpp
